# openstructuralpy

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
openstructuralpy.egg-info/: PKG-INFO
