[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openstructuralpy"  # <-- Add your package name here
version = "0.1.0"
description = "A Python library for structural engineering based on NSCP 2015 and ACI 318-19"
authors = [{name = "Albert Pamonag", email = "your-email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]  # Adjust if your package is structured differently
